--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,10 @@ pytest-mock = "^3.12.0"
 pytest-xdist = "^3.3.1"
 loguru = "^0.7.2"
 
+
+[tool.poetry.group.dev.dependencies]
+typing-extensions = "^4.8.0"
+
 [tool.black]
 line-length = 120
 target-version = ["py310", "py311", "py312"]
