--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         run: poetry install
 
       - name: Run Pytest
-        run: poetry run pytest --cov-report xml --cov=./nonebot_plugin_penguin -n auto
+        run: poetry run pytest --cov-report xml --cov=./expiringdictx -n auto
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
