--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -10,15 +10,12 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Install poetry
-      run: pipx install poetry
-      shell: bash
-
-    - uses: actions/setup-python@v5
+    - name: Setup PDM
+      uses: pdm-project/setup-pdm@v4
       with:
         python-version: ${{ inputs.python-version }}
-        architecture: "x64"
-        cache: "poetry"
+        cache: true
 
-    - run: poetry install
+    - name: Install dependencies
+      run: pdm install
       shell: bash
