--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest, windows-latest]
       fail-fast: false
     env:
@@ -32,10 +32,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install prerequisites
-        run: poetry install
+        run: pdm install
 
       - name: Run Pytest
-        run: poetry run pytest --cov-report xml --cov=./expiringdictx -n auto
+        run: pdm run pytest --cov-report xml --cov=./expiringdictx -n auto
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4
